--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -33,6 +33,8 @@
     />
     <link href="css/tiny-slider.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
+    <link href="css/video-js.min.css" rel="stylesheet" />
+    <link href="css/videojs-chromecast.css" rel="stylesheet" />
     <script src="js/deviceType.js"></script>
     <title>一朵墨</title>
   </head>
@@ -77,7 +79,7 @@
             <div class="intro-excerpt">
               <h1>一朵<span clsas="d-block">墨</span></h1>
               <p class="mb-4">
-                一朵墨書籍管理系統是專為書籍管理而設計的全能平台。AI存書、書籍搜尋管理，並支援桌機與手機瀏覽操作。
+                一朵墨是專為書籍管理而設計的平台。AI存書、書籍搜尋管理，並支援桌機與手機瀏覽操作。
               </p>
               <p>
                 <input
@@ -89,14 +91,14 @@
                 />
               </p>
               <p>
-                <button x-on:click="upload()" class="btn btn-secondary me-2">
+                <button x-on:click="upload()" class="btn btn-white-outline me-2">
                   AI存書
                 </button>
               </p>
               <p>
                 <input
                   id="keyword"
-                  x-on:keydown.enter="search()"
+                  x-on:keydown="search()"
                   type="search"
                   class="form-control"
                   placeholder="可搜尋書名、作者、出版社名..."
@@ -154,6 +156,16 @@
                       class="btn btn-sm btn-danger"
                     >
                       刪除
+                    </button>
+                    <button
+                            x-on:click="preview(item.id, $event)"
+                            class="btn btn-sm btn-secondary"
+                            data-id="{{ item.id }}"
+                    >
+                      <span class="loadingIcon" style="display: none;">
+                          <i class="fa fa-spinner fa-spin"></i>
+                      </span>
+                      <span class="buttonText">試閱</span>
                     </button>
                   </div>
                 </div>
@@ -247,6 +259,30 @@
     </footer>
     <!-- End Footer Section -->
 
+
+    <div class="modal fade" id="videoModal" tabindex="-1" data-bs-backdrop="static" aria-labelledby="videoModal" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+          <div class="modal-header text-white" style="background-color: #3b5d50">
+            <h5 class="modal-title fw-normal">
+              <i class="fas fa-video me-2"></i><span>影片播放</span>
+            </h5>
+            <button type="button" class="btn-close btn-close-video" data-bs-dismiss="modal" aria-label="Close" @click="closeVideo()"></button>
+          </div>
+          <div class="modal-body p-0 d-flex justify-content-center align-items-center">
+            <div id="videoDiv" class="w-100 d-flex justify-content-center align-items-center">
+              <video id="videoTag" class="video-js" controls autoplay webkit-playsinline playsinline>
+                <source src="" type="video/mp4">
+              </video>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <script src="js/videojs-chromecast.min.js"></script>
+    <script src="js/video.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/tiny-slider.js"></script>
     <script src="js/custom.js"></script>
@@ -276,6 +312,8 @@
                 _this.bookData = response.data;
               },
             });
+
+
           },
           getData() {
             const start = this.pageNumber * this.size,
@@ -518,6 +556,89 @@
                 }
               },
             });
+          },
+          preview (bookId){
+            let _this = this;
+            let button = $(event.currentTarget);
+            let loadingIcon = button.find(".loadingIcon");
+            let buttonText = button.find(".buttonText");
+
+            $.ajax({
+              url: "previewBook/" + bookId,
+              type: "get",
+              dataType: "json",
+              contentType: "application/json; charset=utf-8",
+              success: function (response) {
+                if (response.code == "C000") {
+                  //播放影片
+                  $("#videoModal").modal('show');
+                  _this.initVideojs(response.data, 'videoTag');
+                } else if (response.code == "C005" || response.code == "C004"){
+                  //影片製作中
+                  loadingIcon.show();
+                  buttonText.hide();
+                  Swal.fire({
+                    title: "試閱影片加載中，請60秒後再次點擊試閱",
+                    icon: "info",
+                    confirmButtonText: "關閉",
+                    customClass: {
+                      confirmButton: "btn btn-primary",
+                    },
+                  });
+                } else if (response.code == "C003"){
+                  Swal.fire({
+                    title: "系統錯誤，請聯繫管理員...",
+                    icon: "error",
+                    confirmButtonText: "關閉",
+                    customClass: {
+                      confirmButton: "btn btn-primary",
+                    },
+                  });
+                }
+              },
+            });
+          },
+          initVideojs (url, videoId){
+
+            const existingPlayer = videojs.getPlayers()[videoId];
+
+            if (existingPlayer) {
+              existingPlayer.src({
+                src: url,
+                type: 'video/mp4'
+              });
+              existingPlayer.play(); // 自動播放
+              console.log('更換影片播放');
+              return existingPlayer;
+            } else {
+
+              const player = videojs(videoId, {
+                controls: true,    // 顯示控制條
+                autoplay: false,   // 不自動播放
+                preload: 'auto',   // 預加載視頻
+                fluid: true,       // 使視頻能夠自適應大小
+                playbackRates: [0.5, 1, 1.25, 1.5, 2],  // 設置播放速度選項
+                sources: [{
+                  src: url,  // 這是影片的路徑
+                  type: 'video/mp4'  // 設置影片格式
+                }]
+              });
+
+              player.on('ready', function() {
+                console.log('Player is ready');
+              });
+
+              player.on('ended', function() {
+                console.log('Video has ended');
+              });
+
+              return player;
+            }
+          },
+          closeVideo(){
+            if (!videojs('videoTag').paused()) {
+              videojs('videoTag').pause();
+            }
           },
         };
       }
