1019 Yfian 修改domain name

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="一朵墨">
     <meta property="og:description" content="「一朵墨」書籍管理系統是專為書籍管理而設計的全能平台。AI存書、書籍搜尋管理，並支援多介面協作。一朵墨讓書籍管理變得簡單高效。">
     <meta property="og:image" content="images/favicon.png">
-    <meta property="og:url" content="https://www.gurula.cc/inkCloud/index.html">
+    <meta property="og:url" content="https://gurula.cc/inkCloud/index.html">
     <meta property="og:type" content="website">
     <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
     <link rel="icon" href="images/favicon.png" type="image/x-icon"/>
